Add tooltip's to squadron details.